# ampliflow

./: .dockerignore  README.md  build_download_fastqs.sh  neoflow.nf  nextflow.config  pyproject.toml  requirements.txt
src/create_deblur_input/: create_deblur_input.py
src/download_fastqs/: Dockerfile  download_fastqs.py
src/fastq_to_fasta/: fastq_to_fasta.py
src/get_fastqs_blobs/: get_fastqs_blobs.py
src/shared/: file_manager.py  gcs_manager.py
src/standarize_size/: standarize_size.py
src/trimming/: trim_fasta.py
